--- a/src/assets/scss/utils/common.scss
+++ b/src/assets/scss/utils/common.scss
@@ -37,11 +37,15 @@ a {
   color: $white;
   font-size: 30vw * $px;
   line-height: 0.9;
-  text-decoration-line: underline;
   font-variant: all-small-caps;
   display: inline-block;
   font-weight: 300;
   cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .socials {
@@ -103,7 +107,32 @@ a {
   }
 }
 
+.arr_btn {
+  height: 62vw * $px;
+  width: 40vw * $px;
+  cursor: pointer;
+  background-image: url("/assets/img/svg/arrow-up-white.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0.7;
+  transition: all 0.3s ease;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &.down {
+    background-image: url("/assets/img/svg/arrow-down-white.svg");
+  }
+}
+
 @media only screen and (min-width: $containerWidth) {
+
+  body {
+    font-size: $mainFontSizeMax;
+  }
+
   .btn {
     padding: 25px 38px;
     font-size: 30px;
@@ -125,5 +154,10 @@ a {
     &-item {
       margin-right: 25px;
     }
+  }
+
+  .arr_btn {
+    height: 62px;
+    width: 40px;
   }
 }
