--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -1,5 +1,4 @@
 .header {
-  padding: 25vw * $px 30vw * $px 27vw * $px 28vw * $px;
   background: $white;
   position: fixed;
   top: 0;
@@ -19,6 +18,7 @@
   }
 
   .container {
+    padding: 25vw * $px 30vw * $px 27vw * $px 28vw * $px;
     display: flex;
     align-items: center;
   }
@@ -33,8 +33,11 @@
 
 @media only screen and (min-width: $containerWidth) {
   .header {
-    padding: 25px 30px 27px 28px;
     height: 113px;
+
+    .container {
+      padding: 25px 30px 27px 28px;
+    }
 
     &_logo {
       width: 330px;
