--- a/src/assets/scss/utils/common.scss
+++ b/src/assets/scss/utils/common.scss
@@ -42,6 +42,8 @@ a {
   font-weight: 300;
   cursor: pointer;
   transition: all 0.3s ease;
+  border: none;
+  text-align: left;
 
   &:hover {
     text-decoration: underline;
