--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,4 +10,5 @@
 @import "components/banner";
 @import "components/width-block";
 @import "components/block";
+@import "components/bank_block";
 @import "components/footer";
