--- a/src/assets/scss/components/width-block.scss
+++ b/src/assets/scss/components/width-block.scss
@@ -16,8 +16,10 @@
   &.half {
 
     .width_block-info {
-      padding: 0 110vw * $px 92vw * $px 677vw * $px;
+      padding: 0 110vw * $px 92vw * $px;
       transform: translateY(-60vw * $px);
+      display: flex;
+      align-items: center;
 
       &_title {
         max-width: 100%;
@@ -60,6 +62,14 @@
       font-weight: 300;
       line-height: 1.3;
     }
+
+    .left_part {
+      img {
+        width: 390vw * $px;
+        object-fit: contain;
+        margin: 0 85vw * $px;
+      }
+    }
   }
 
   p {
@@ -77,7 +87,7 @@
   .width_block {
     &.half {
       .width_block-info {
-        padding: 0 110px 92px 677px;
+        padding: 0 110px 92px;
         transform: translateY(-60px);
 
         &_title {
@@ -101,6 +111,13 @@
       &_title {
         font-size: 64px;
         margin-bottom: 45px;
+      }
+
+      .left_part {
+        img {
+          width: 390px;
+          margin: 0 85px;
+        }
       }
 
     }
