--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -26,7 +26,10 @@
   &_logo {
     margin-right: auto;
     width: 390vw * $px;
-    object-fit: contain;
+
+    img {
+      object-fit: contain;
+    }
   }
 
 }
