--- a/src/assets/scss/components/banner.scss
+++ b/src/assets/scss/components/banner.scss
@@ -26,7 +26,8 @@
   display: flex;
   padding: 0 30vw * $px;
   background: $white;
-  font-variant: all-small-caps;
+  font-variant-caps: petite-caps;
+  text-transform: lowercase;
   line-height: 0.9;
   overflow: hidden;
 
