--- a/src/assets/scss/components/width-block.scss
+++ b/src/assets/scss/components/width-block.scss
@@ -49,7 +49,8 @@
 
   &-info {
     padding: 67vw * $px 30vw * $px 80vw * $px;
-    font-variant: all-small-caps;
+    font-variant-caps: petite-caps;
+    text-transform: lowercase;
 
     &_title {
       max-width: 50%;
