--- a/src/assets/scss/utils/common.scss
+++ b/src/assets/scss/utils/common.scss
@@ -37,7 +37,8 @@ a {
   color: $white;
   font-size: 30vw * $px;
   line-height: 0.9;
-  font-variant: all-small-caps;
+  font-variant-caps: petite-caps;
+  text-transform: lowercase;
   display: inline-block;
   font-weight: 300;
   cursor: pointer;
@@ -142,7 +143,8 @@ p {
   font-weight: 400;
   font-size: 64vw * $px;
   line-height: 0.9;
-  font-variant: all-small-caps;
+  font-variant-caps: petite-caps;
+  text-transform: lowercase;
 }
 
 @media only screen and (min-width: $containerWidth) {
