--- a/src/assets/scss/components/bank_block.scss
+++ b/src/assets/scss/components/bank_block.scss
@@ -8,18 +8,14 @@
 
   &-list {
     &_item {
-      border-bottom: 6px solid $grey;
+      border-bottom: 6vw * $px solid $grey;
 
       &:first-of-type {
-        border-top: 6px solid $grey;
-      }
-
-      &:last-of-type {
-        border-bottom: 6px solid $grey;
+        border-top: 6vw * $px solid $grey;
       }
 
       &.active {
-        border-bottom: 6px solid transparent;
+        border-bottom: 6vw * $px solid transparent;
 
         .vert {
           opacity: 0;
@@ -88,6 +84,16 @@
 
     &-list {
       &_item {
+        border-bottom: 6px solid $grey;
+
+        &:first-of-type {
+          border-top: 6px solid $grey;
+        }
+
+        &.active {
+          border-bottom: 6px solid transparent;
+        }
+
         .toggle_title {
           padding: 40px;
           font-size: 48px;
