--- a/src/assets/scss/components/width-block.scss
+++ b/src/assets/scss/components/width-block.scss
@@ -25,6 +25,10 @@
         max-width: 100%;
         margin-bottom: 68vw * $px;
       }
+
+      &_text {
+        font-size: 24vw * $px;
+      }
     }
   }
 
@@ -49,10 +53,9 @@
 
   &-info {
     padding: 67vw * $px 30vw * $px 80vw * $px;
-    font-variant-caps: petite-caps;
-    text-transform: lowercase;
 
     &_title {
+      text-transform: lowercase;
       max-width: 50%;
       font-size: 64vw * $px;
       line-height: 0.9;
@@ -61,6 +64,7 @@
 
     &_text {
       font-weight: 300;
+      font-size: 30vw * $px;
       line-height: 1.3;
     }
 
@@ -94,6 +98,11 @@
         &_title {
           margin-bottom: 68px;
         }
+
+        &_text {
+          font-size: 24px;
+        }
+
       }
     }
 
@@ -112,6 +121,10 @@
       &_title {
         font-size: 64px;
         margin-bottom: 45px;
+      }
+
+      &_text {
+        font-size: 30px;
       }
 
       .left_part {
