--- a/src/assets/scss/utils/common.scss
+++ b/src/assets/scss/utils/common.scss
@@ -40,7 +40,7 @@ a {
   font-variant-caps: petite-caps;
   text-transform: lowercase;
   display: inline-block;
-  font-weight: 300;
+  //font-weight: 300;
   cursor: pointer;
   transition: all 0.3s ease;
   border: none;
