--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -11,6 +11,7 @@
   transform: translateY(0);
   opacity: 1;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  max-height: 130vw * $px;
 
   &.header-hidden {
     opacity: 0;
@@ -39,6 +40,8 @@
 
 @media only screen and (min-width: $containerWidth) {
   .header {
+    max-height: 130px;
+
     .container {
       padding: 13px 30px 18px 40px;
     }
