--- a/src/assets/scss/components/block.scss
+++ b/src/assets/scss/components/block.scss
@@ -1,16 +1,16 @@
 .block_one {
   display: flex;
   align-items: center;
-  padding: 50vw * $px 75vw * $px 50vw * $px 30vw * $px;
-  background: $white;
+  padding: 50vw * $px 30vw * $px;
   margin: 50vw * $px auto 100vw * $px;
+  flex-flow: row-reverse;
 
   &:last-of-type {
     margin-bottom: 50vw * $px;
   }
 
   &-info {
-    padding: 50vw * $px 100vw * $px 50vw * $px 0;
+    padding: 0 50vw * $px 0 70vw * $px;
     line-height: 0.9;
     display: flex;
     flex-flow: column;
@@ -20,14 +20,15 @@
     &_title {
       text-transform: lowercase;
       font-variant-caps: petite-caps;
-      font-size: 64vw * $px;
-      margin-bottom: 100vw * $px;
+      font-size: 56vw * $px;
+      margin-bottom: 85vw * $px;
     }
 
     &_text {
       margin-bottom: 100vw * $px;
-      font-weight: 300;
-      font-size: 30vw * $px;
+      //font-weight: 300;
+      font-size: 24vw * $px;
+      line-height: 1;
     }
   }
 
@@ -41,7 +42,7 @@
 
 @media only screen and (min-width: $containerWidth) {
   .block_one {
-    padding: 50px 75px 50px 30px;
+    padding: 50px 30px;
     margin: 50px auto 100px;
 
     &:last-of-type {
@@ -49,15 +50,15 @@
     }
 
     &-info {
-      padding: 50px 100px 50px 0;
+      padding: 0 50px 0 70px;
 
       &_title {
-        font-size: 64px;
-        margin-bottom: 100px;
+        font-size: 56px;
+        margin-bottom: 85px;
       }
 
       &_text {
-        font-size: 30px;
+        font-size: 24px;
         margin-bottom: 100px;
       }
     }
