--- a/src/assets/scss/components/width-block.scss
+++ b/src/assets/scss/components/width-block.scss
@@ -1,5 +1,6 @@
 .width_block {
   width: 100%;
+  background: $white;
 
   &.black {
     background: $black;
@@ -14,6 +15,7 @@
   }
 
   &.half {
+    font-family: OpenSans, sans-serif;
 
     .width_block-info {
       padding: 0 110vw * $px 92vw * $px;
@@ -56,16 +58,15 @@
 
     &_title {
       text-transform: lowercase;
-      max-width: 50%;
+      max-width: 60%;
       font-size: 64vw * $px;
       line-height: 0.9;
       margin-bottom: 45vw * $px;
     }
 
     &_text {
-      font-weight: 300;
-      font-size: 30vw * $px;
-      line-height: 1.3;
+      font-size: 28vw * $px;
+      line-height: 1.05;
     }
 
     .left_part {
@@ -83,6 +84,11 @@
     &:last-of-type {
       margin-bottom: 0;
     }
+  }
+
+  &_pre-title {
+    text-align: center;
+    margin-bottom: 100vw * $px;
   }
 
 }
@@ -124,7 +130,7 @@
       }
 
       &_text {
-        font-size: 30px;
+        font-size: 28px;
       }
 
       .left_part {
@@ -139,6 +145,10 @@
 
     p {
       margin-bottom: 20px;
+    }
+
+    &_pre-title {
+      margin-bottom: 100px;
     }
 
   }
