--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,4 +11,8 @@
 @import "components/width-block";
 @import "components/block";
 @import "components/bank_block";
+@import "components/description";
 @import "components/footer";
+
+//Pages
+@import "pages/infrastructure";
