--- a/src/assets/scss/components/description.scss
+++ b/src/assets/scss/components/description.scss
@@ -11,14 +11,18 @@
   &_info {
     &-title {
       font-size: 56vw * $px;
-      padding: 0 40vw * $px 0 0;
-      max-width: 50%;
+      padding: 0 130vw * $px 0 0;
       font-variant-caps: petite-caps;
       text-transform: lowercase;
       line-height: 0.9;
-      float: left;
-      margin-bottom: 10vw * $px;
+      margin-bottom: 43vw * $px;
     }
+  }
+
+  .single_center {
+    margin: 90vw * $px auto;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -34,9 +38,13 @@
     &_info {
       &-title {
         font-size: 56px;
-        padding: 0 40px 0 0;
-        margin-bottom: 10px;
+        padding: 0 130px 0 0;
+        margin-bottom: 43px;
       }
+    }
+
+    .single_center {
+      margin: 90px auto;
     }
   }
 }
