Buttons text fixes

--- a/src/assets/scss/components/width-block.scss
+++ b/src/assets/scss/components/width-block.scss
@@ -28,9 +28,9 @@
         margin-bottom: 68vw * $px;
       }
 
-      &_text {
-        font-size: 24vw * $px;
-      }
+      //&_text {
+      //  font-size: 24vw * $px;
+      //}
     }
   }
 
@@ -105,9 +105,9 @@
           margin-bottom: 68px;
         }
 
-        &_text {
-          font-size: 24px;
-        }
+        //&_text {
+        //  font-size: 24px;
+        //}
 
       }
     }
