--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -42,6 +42,7 @@
   .header {
     max-height: 130px;
 
+
     .container {
       padding: 13px 30px 18px 40px;
     }
@@ -51,3 +52,40 @@
     }
   }
 }
+
+@media only screen and (max-width: $mobileWidth) {
+  .header {
+    max-height: 75vw * $pxm;
+
+    .lang,
+    .socials {
+      display: none;
+    }
+
+    .container {
+      padding: 13vw * $pxm 20vw * $pxm;
+    }
+
+    &_logo {
+      width: 110vw * $pxm;
+    }
+
+    .burger_btn{
+      width: 26vw * $pxm;
+      height: 26vw * $pxm;
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+      justify-content: space-around;
+
+      span {
+        height: 3vw * $pxm;
+        width: 100%;
+        background: $black;
+      }
+    }
+  }
+
+}
+
+
