--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -10,7 +10,9 @@ $mainFont: Roboto, sans-serif;
 
 // Sizes
 $containerWidth: 1600px;
-$px: 0.0625; // 1600(ширина макету) / 100 (%)
+$mobileWidth: 768px;
+$px: 0.0625; //  100 / 1600(ширина макету)
+$pxm: 0.267; //  100 / 375(ширина макету)
 
 $mainFontColor: $black;
 $bodyWhite: #F7F8F9;
@@ -18,32 +20,4 @@ $mainFontWeight: 400;
 $mainLineHeight: 1.2;
 $mainFontSize: 24vw * $px;
 $mainFontSizeMax: 24px;
-
-
-//$desktopWidth            : 1280px;
-//$smDesktopWidth          : 1024px;
-//$tableWidth              : 768px;
-//$smTableWidth            : 640px;
-//$phoneWidth              : 480px;
-//$smPhoneWidth            : 320px;
-
-
-//$default-color           : #ffffff;
-//$primary-color           : #444ce0;
-//$success-color           : #26de81;
-//$danger-color            : #fc5c65;
-//$warning-color           : #fed330;
-//$light-color             : #999999;
-//$purple-color            : #8854d0;
-
-//// Neutral Color
-//$neutral-primary         : #303133;
-//$neutral-regular         : #606266;
-//$neutral-secondary       : #909399;
-//$neutral-placeholder     : #C0C4CC;
-//
-//// Border Color
-//$border-base             : #DCDFE6;
-//$border-light            : #E4E7ED;
-//$border-lighter          : #EBEEF5;
-//$border-lightex          : #F2F6FC;
+$mainFontSizeMobile: 18px;
