--- a/src/assets/scss/components/banner.scss
+++ b/src/assets/scss/components/banner.scss
@@ -119,75 +119,39 @@
 @media only screen and (max-width: $mobileWidth) {
   .banner {
     max-height: 100vh;
-    min-height: 50vw;
+    min-height: 550vw * $pxm;
+    height: auto;
 
     &_text {
-      padding: 0 15vw * $pxm;
-      font-size: 36vw * $pxm;
+      padding: 0 18vw * $pxm;
+      font-size: 34vw * $pxm;
     }
 
     .arr_btn {
-      right: 20vw * $pxm;
-      bottom: 25vw * $pxm;
+      display: none;
     }
   }
 
   .page_nav {
     padding: 0;
     font-size: 22vw * $pxm;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 20;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    opacity: 0;
-    transform: translateX(110%);
+    overflow-x: auto;
+    overflow-y: hidden;
     transition: all 0.3s ease;
-
-    &:before {
-      content: "";
-      background-image: url("/assets/img/trident.png");
-      background-repeat: no-repeat;
-      background-position-y: center;
-      background-position-x: 20vw;
-      background-size: 100%;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      opacity: 0.15;
-    }
-
-    &.opened {
-      opacity: 1;
-      transform: translateX(0);
-    }
 
     &-item {
       padding: 0;
-      border-bottom: 2px solid rgba($black, 0.15);
-
+      border-bottom: 10px solid transparent;
 
       &.active {
-        border-bottom: 2px solid transparent;
-
-        .page_nav-item_text {
-          background: rgba($black, 0.15);
-        }
+        border-color: $black;
       }
 
       &_text {
-        padding: 24vw * $pxm 30vw * $pxm;
+        padding: 23vw * $pxm 30vw * $pxm 13vw * $pxm;
         margin-right: 0;
         width: 100%;
+        min-width: 350vw * $pxm;
 
         &::after {
           display: none;
