--- a/src/assets/scss/components/width-block.scss
+++ b/src/assets/scss/components/width-block.scss
@@ -160,12 +160,10 @@
     &.half {
 
       .width_block-info {
-        flex-flow: column-reverse;
-        padding: 40vw * $pxm 16vw * $pxm 60vw * $pxm;
-        transform: translateY(0);
+        padding: 0 16vw * $pxm 70vw * $pxm;
 
         &_title {
-          margin-bottom: 35vw * $pxm;
+          margin-bottom: 30vw * $pxm;
         }
 
       }
@@ -173,39 +171,43 @@
 
     &.white {
       .width_block-banner {
+        opacity: 0.6;
+
         &::after {
-          height: 44vw * $pxm;
+          height: 150vw * $pxm;
         }
       }
     }
 
     &-banner {
-      height: 240vw * $pxm;
+      height: 390vw * $pxm;
 
       &::after {
-        height: 22vw * $pxm;
+        height: 60vw * $pxm;
       }
 
     }
 
     &-info {
-      padding: 40vw * $pxm 16vw * $pxm 60vw * $pxm;
+      padding: 0 16vw * $pxm 100vw * $pxm;
 
       &_title {
-        font-size: 34vw * $pxm;
-        margin-bottom: 20vw * $pxm;
+        font-size: 50vw * $pxm;
+        margin-bottom: 30vw * $pxm;
+        transform: translateY(-30vw * $pxm);
+        max-width: 100%;
       }
 
       &_text {
         font-size: 20vw * $pxm;
+        line-height: 1.2;
+        padding-right: 16vw * $pxm;
       }
 
-      .left_part {
-        margin: 40vw * $pxm auto 0;
-
-        img {
-          width: 60vw;
-          margin: 0;
+      .right_part {
+        &-img {
+          width: 370vw * $pxm;
+          margin: 0 auto 70vw * $pxm;
         }
       }
 
@@ -217,7 +219,7 @@
     }
 
     &_pre-title {
-      margin-bottom: 50vw * $pxm;
+      margin-bottom: 100vw * $pxm;
     }
 
   }
