--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -20,4 +20,4 @@ $mainFontWeight: 400;
 $mainLineHeight: 1.2;
 $mainFontSize: 24vw * $px;
 $mainFontSizeMax: 24px;
-$mainFontSizeMobile: 20px;
+$mainFontSizeMobile: 20vw * $pxm;
