--- a/src/assets/scss/components/description.scss
+++ b/src/assets/scss/components/description.scss
@@ -17,6 +17,12 @@
       line-height: 0.9;
       margin-bottom: 43vw * $px;
     }
+
+    &-text {
+      ul {
+        padding-left: 50vw * $px;
+      }
+    }
   }
 
   .single_center {
@@ -41,10 +47,50 @@
         padding: 0 130px 0 0;
         margin-bottom: 43px;
       }
+
+      &-text {
+        ul {
+          padding-left: 50px;
+        }
+      }
     }
 
     .single_center {
       margin: 90px auto;
+    }
+  }
+}
+
+
+@media only screen and (max-width: $mobileWidth) {
+  .description {
+    padding: 0 0 60vw * $pxm;
+
+    &_img {
+      height: 100vw;
+      width: 100vw;
+      margin-bottom: 0;
+    }
+
+    &_info {
+      padding: 50vw * $pxm 16vw * $pxm;
+
+      &-title {
+        font-size: 50vw * $pxm;
+        padding: 0;
+        margin-bottom: 50vw * $pxm;
+      }
+
+      &-text {
+        ul {
+          padding-left: 30vw * $pxm;
+        }
+      }
+    }
+
+    .single_center {
+      margin: 5vw * $pxm 0 50vw * $pxm;
+      padding: 0 16vw * $pxm;
     }
   }
 }
