Added google tag scripts. Changed logo. Added notranslate meta tag.

--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -28,7 +28,10 @@
     margin-right: auto;
     width: 253vw * $px;
     display: inline-grid;
-    overflow: visible;
+    overflow: hidden;
+    background-color: #fff;
+    border: none;
+    outline: none;
 
     img {
       object-fit: contain;
