About us page added slider

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import "components/block";
 @import "components/bank_block";
 @import "components/description";
+@import "components/docs";
 @import "components/footer";
 
 //Pages
